--- a/src/assets/locales/fr.json
+++ b/src/assets/locales/fr.json
@@ -1,4 +1,7 @@
 {
+  "Common":{
+    "alo":"Hello France"
+  },
   "RootLayout": {
     "home_link": "Accueil",
     "about_link": "A propos",
@@ -15,20 +18,6 @@
     "meta_title": "Présentation de Next.js Boilerplate",
     "meta_description": "Next js Boilerplate est le code de démarrage parfait pour votre projet. Construisez votre application React avec le framework Next.js.",
     "sponsors_title": "Partenaires"
-  },
-  "Counter": {
-    "meta_title": "Compteur",
-    "meta_description": "Un exemple d'opération DB",
-    "loading_counter": "Chargement du compteur...",
-    "security_powered_by": "Sécurité, détection de bot et rate limiting propulsés par"
-  },
-  "CounterForm": {
-    "presentation": "Le compteur est stocké dans la base de données et incrémenté par la valeur que vous fournissez.",
-    "label_increment": "Incrémenter de",
-    "button_increment": "Incrémenter"
-  },
-  "CurrentCount": {
-    "count": "Nombre : {count}"
   },
   "About": {
     "meta_title": "A propos",
